// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type T = [("a" | "b")?];
type TupleWithOptional = [number, (1 extends 2 ? string[] : number[])?];

=====================================output=====================================
type T = [("a" | "b")?];
type TupleWithOptional = [number, (1 extends 2 ? string[] : number[])?];

================================================================================
`;

exports[`simple.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type X = [number, string?];

=====================================output=====================================
type X = [number, string?];

================================================================================
`;
